# fs

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: dir.hpp  file-object.hpp  file.hpp  files.hpp  fs.hpp  root.hpp
src/: dir.cc  file-object.cc  file.cc  fs.cc  main.cc  root.cc
